--- a/src/Styles/Task/Taskcard.css
+++ b/src/Styles/Task/Taskcard.css
@@ -35,6 +35,10 @@
 }
 
 .board-view-section {
+    border: 2px solid transparent;
+}
+
+.board-view-section:hover {
     border: 2px solid #D5E8FF;
 }
 
@@ -69,11 +73,245 @@
 .add-board {
     margin-top: 1rem;
     border: 2px solid #D5E8FF;
-    padding: 1rem;
+    padding: 0.6rem;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 0.6rem;
     text-align: center;
     font-family: EuclidMedium;
+    cursor: pointer;
+    color: rgba(132, 147, 178, 1);
+}
+
+.create-board-text {
+    color: rgba(28, 29, 34, 1);
+    font-family: EuclidMedium;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.board-title {
+    margin-top: 1rem;
+    width: 100%;
+    outline: none;
+    border: none;
+    padding: 1rem 0rem;
+    font-size: 1.6rem;
+    border-bottom: 1px solid rgba(132, 147, 178, 1);
+}
+
+.board-title::-webkit-input-placeholder {
+    color: rgba(211, 220, 229, 1);
+    font-size: 1.6rem;
+    font-family: EuclidMedium;
+}
+
+.create-board-by-box {
+    display: flex;
+    align-items: center;
+    column-gap: 0.6rem;
+    /* padding: 2rem 1.5rem; */
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 1.5rem;
+}
+
+.create-board-by-txt {
+    font-family: EuclidMedium;
+    font-size: 1rem;
+    color: rgba(27, 36, 54, 1);
+}
+
+.select-pop-below {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 16rem;
+    background-color: #fff;
+    padding: 1rem 1.5rem;
+    z-index: 99;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    /* overflow-y: scroll; */
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+    -moz-box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+    box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+}
+
+.pop-below-txt {
+    color: rgba(27, 36, 54, 1);
+    font-family: EuclidRegular;
+    padding: 0.3rem;
+}
+
+.create-board-btns {
+    display: flex;
+    column-gap: 1rem;
+    justify-content: flex-end;
+}
+
+.create-board-btns1,
+.create-board-btns2 {
+    color: rgba(27, 81, 187, 1);
+    border: 1px solid rgba(27, 81, 187, 1);
+    padding: 0.8rem 2rem;
+    border-radius: 0.5rem;
+    font-family: EuclidMedium;
+    cursor: pointer;
+}
+
+.create-board-btns2 {
+    background-color: rgba(27, 81, 187, 1);
+    color: #fff;
+}
+
+/* create board based time frame */
+
+.create-board-based-time,
+.create-board-based-form,
+.create-board-based-status {
+    position: relative;
+    cursor: pointer;
+}
+
+.time-frame-txt,
+.form-frame-txt,
+.status-frame-txt {
+    font-size: 1rem;
+    font-family: EuclidMedium;
+    color: rgba(27, 36, 54, 1);
+    border: 1px solid rgba(211, 220, 229, 1);
+    padding: 0.5rem 1rem;
+    margin-top: 1.5rem;
+    border-radius: 0.3rem;
+}
+
+.select-time-pop-below {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 12rem;
+    background-color: #fff;
+    padding: 1rem 1.5rem;
+    z-index: 2;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    /* overflow-y: scroll; */
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+    -moz-box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+    box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+}
+
+/* create board based on form */
+
+.select-form-pop-below {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 16rem;
+    overflow-y: scroll;
+    background-color: #fff;
+    padding: 1rem;
+    z-index: 2;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    /* overflow-y: scroll; */
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+    -moz-box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+    box-shadow: 4px 0 32px 0 rgba(61, 70, 112, 0.14);
+}
+
+
+.board-form-template {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.board-form-icon {
+    background-color: rgba(27, 81, 187, 1);
+    width: 2rem;
+    height: 2rem;
+    border-radius: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.board-form-txt {
+    font-size: 0.9rem;
+    font-family: EuclidMedium;
+    color: rgba(27, 36, 54, 1);
+}
+
+.board-form-tag {
+    font-family: EuclidMedium;
+    font-size: 0.9rem;
+    color: rgba(0, 179, 72, 1);
+    background-color: rgba(0, 179, 72, 0.1);
+    padding: 0.2rem 0.4rem;
+    width: 9.5rem;
+    border-radius: 0.3rem;
+}
+
+/* create board based on task status */
+
+.select-status-pop-below {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 3rem;
+    margin-top: 0.5rem;
+    background-color: #fff;
+    padding: 1rem;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0.3rem;
+    border: 1px solid rgba(211, 220, 229, 1);
+}
+
+.status-box {
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.select-circle {
+    border: 1px solid rgba(207, 211, 212, 1);
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+}
+
+.task-board-status {
+    color: rgba(0, 179, 72, 1);
+    background-color: rgba(58, 255, 137, 0.15);
+    padding: 0.2rem 0.6rem;
+    border-radius: 0.3rem;
+    /* width: 3rem; */
+    font-family: EuclidMedium;
+}
+
+#status-initiated {
+    color: rgba(207, 104, 30, 1);
+    background-color: rgba(255, 235, 168, 1);
+}
+
+#status-pending {
+    color: rgba(221, 54, 31, 1);
+    background-color: rgba(255, 159, 159, 0.3);
 }
