--- a/src/Styles/Task/TaskCreate.css
+++ b/src/Styles/Task/TaskCreate.css
@@ -365,16 +365,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .range-boxes {
     display: flex;
     justify-content: space-between;
-    width: 70%;
+    width: 100%;
+    column-gap: 1rem;
     margin-top: 1rem;
     /* background-color: #1B2436;s */
 }
 
 .range-box {
-    width: 30%;
+    width: 50%;
     display: flex;
     flex-direction: column;
 }
+
 
 .start-date {
     background-color: rgba(247, 249, 251, 1);
