--- a/src/Styles/Task/TaskCreate.css
+++ b/src/Styles/Task/TaskCreate.css
@@ -256,15 +256,16 @@ input[type=file]::-webkit-file-upload-button {
 
 /* ScrollableDatePicker.css */
 
-.scrollable-date-picker {
+/* .scrollable-date-picker {
     display: inline-block;
     position: relative;
-}
+} */
 
 .react-datepicker {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    max-height: 300px;
+    max-height: 300px; */
+    background-color: red;
     /* Adjust the max height as needed */
     overflow-y: auto;
 }
@@ -273,10 +274,11 @@ input[type=file]::-webkit-file-upload-button {
     margin-left: 12%;
     margin-bottom: 3.5%;
     font-family: EuclidRegular !important;
-    width: 30% !important;
+    /* width: 30% !important; */
     -webkit-box-shadow: 1px 5px 42px -30px #000000;
     box-shadow: 1px 5px 42px -30px #000000;
     background-color: rgba(255, 255, 255, 1) !important;
+    /* background-color: pink !important; */
 }
 
 input[type="date"]::-webkit-inner-spin-button,
@@ -366,9 +368,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    column-gap: 1rem;
+    column-gap: 5rem;
     margin-top: 1rem;
-    /* background-color: #1B2436;s */
+    /* background-color: #1B2436; */
 }
 
 .range-box {
