--- a/src/Styles/TaskListView.css
+++ b/src/Styles/TaskListView.css
@@ -70,6 +70,7 @@
     border-radius: 11.823px;
     border: 1.182px solid #E6E8EC;
     background: #FFF;
+    overflow-y: hidden;
     -webkit-box-shadow: 1px 1px 6px -5px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 1px 1px 6px -5px rgba(0, 0, 0, 0.75);
     box-shadow: 1px 1px 6px -5px rgba(0, 0, 0, 0.75);
